--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -15,15 +15,20 @@ jobs:
         id: checkout_repository
         uses: actions/checkout@v1
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v2
+
       - name: Lint
         id: python_linting
         run: |
-          pip install flake8
-          flake8 code/ --count --ignore=E501 --show-source --statistics
-          flake8 tests/ --count --ignore=E501,E402 --show-source --statistics
+          python3 -m pip install pipenv
+          pipenv shell
+          pipenv install -r requirements.txt
+          pipenv install flake8
+          flake8 . --count --ignore=E501 --show-source --statistics
+          flake8 tests --count --ignore=E501,E402 --show-source --statistics
 
       - name: Test
         id: python_test
         run: |
-          pip install pytest jsonschema azureml-sdk
-          pytest
+          python3 -m unittest tests/*
