--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,8 +25,8 @@ jobs:
           python3 -m pip install -r requirements.txt
           python3 -m pip install flake8
           ls -laR
-          flake8 . --count --config=~/.flake8 --show-source --statistics
-          flake8 tests --count --config=~/.flake8 --show-source --statistics
+          flake8 . --count --config=.flake8 --show-source --statistics
+          flake8 tests --count --config=.flake8 --show-source --statistics
 
       - name: Test
         id: python_test
