--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,21 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-mlspeclib = "*"
+mlspeclib = "==0.0.7"
+aenum = "==2.2.3"
+gremlinpython = "==3.4.6"
+isodate = "==0.6.0"
+marshmallow = "==3.6.0"
+python-box = "==4.2.3"
+semver = "==2.10.1"
+six = "==1.14.0"
+toml = "==0.10.0"
+tornado = "==5.1.1"
+uritools = "==3.0.0"
+PyMySQL = "==0.9.3"
+PyYAML = "==5.3.1"
+"ruamel.yaml.clib" = "==0.2.0"
+"ruamel.yaml" = "==0.16.10"
 
 [requires]
 python_version = "3.6"
