Adding docker login

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,3 +9,10 @@ jobs:
         uses: actions/checkout@master
         with:
           ref: ${{github.ref}}
+          
+      - name: Docker Login
+        uses: Azure/docker-login@v1
+        with:
+          username: ${{ secrects.DOCKERUSERNAME }}
+          password: ${{ secrects.DOCKERPASSWORD }}
+          login-server: https://index.docker.io/v1/
