updating integration testing

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@master
         with:
           ref: ${{github.ref}}
-          
+
       - name: Docker Login
         uses: Azure/docker-login@v1
         with:
@@ -32,7 +32,7 @@ jobs:
       - name: Test Image
         id: test_image_e2e
         run: |
+          python3 -m pip install --user --upgrade setuptools wheel
           python3 -m pip install pipenv
-          python3 -m pipenv install
           python3 -m pipenv install -r requirements.txt
-          python3 -m unittest integration/test_e2e_integration.py
+          python3 -m pipenv run python3 -m unittest integration/test_e2e_integration.py
