--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,6 +11,7 @@ jobs:
           ref: ${{github.ref}}
 
       - name: Docker Login
+        id: docker_login
         uses: Azure/docker-login@v1
         with:
           username: ${{ secrets.DOCKERUSERNAME }}
@@ -18,6 +19,7 @@ jobs:
           login-server: https://index.docker.io/v1/
 
       - name: Build Docker images
+        id: docker_build
         uses: docker/build-push-action@v1.1.0
         with:
           # Docker repository to tag the image with
@@ -27,6 +29,7 @@ jobs:
           push: False
 
       - name: Debugging with tmate
+        id: tmate_debugging
         uses: mxschmitt/action-tmate@v2
 
       - name: Test Image
@@ -38,3 +41,13 @@ jobs:
           python3 -m pipenv run python3 -m unittest integration/test_e2e_integration.py
         with:
           METASTORE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Build Docker images
+        id: push_docker_images
+        uses: docker/build-push-action@v1.1.0
+        with:
+          # Docker repository to tag the image with
+          repository: mlspeclib/mlspeclib-action-sample-process-data
+          tag_with_ref: True
+          tag_with_sha: True
+          push: False
