--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,7 +9,6 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: "3.6"
-          METASTORE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
     
       - name: Check Out Repository
         id: checkout_repository
@@ -41,6 +40,8 @@ jobs:
 
       - name: Test Image
         id: test_image_e2e
+        env:
+          METASTORE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
         run: |
           python3 -m pip install --user --upgrade setuptools wheel
           python3 -m pip install pipenv
