fixing metastore credentials

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: "3.6"
-    
+
       - name: Check Out Repository
         id: checkout_repository
         uses: actions/checkout@master
@@ -37,13 +37,13 @@ jobs:
       - name: Debugging with tmate
         id: tmate_debugging
         env:
-          METASTORE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          INPUT_METASTORE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
         uses: mxschmitt/action-tmate@v2
 
       - name: Test Image
         id: test_image_e2e
         env:
-          METASTORE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          INPUT_METASTORE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
         run: |
           python3 -m pip install --user --upgrade setuptools wheel
           python3 -m pip install pipenv
