quoting metastore credentials

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Test Image
         id: test_image_e2e
         env:
-          INPUT_METASTORE_CREDENTIALS: ${{ secrets.METASTORE_CREDENTIALS }}
+          INPUT_METASTORE_CREDENTIALS: '${{ secrets.METASTORE_CREDENTIALS }}'
         run: |
           python3 -m pip install --user --upgrade setuptools wheel
           python3 -m pip install pipenv
