--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,14 @@ aenum==2.2.3
 gremlinpython==3.4.6
 isodate==0.6.0
 marshmallow==3.6.0
-mlspeclib==0.0.14
+mlspeclib==0.0.16
 msgpack==1.0.0
 pymysql==0.9.3
 python-box==5.0.0a0
 pyyaml==5.3.1
 semver==2.10.1
 six==1.14.0
+toml==0.10.1
 tornado==5.1.1
 uritools==3.0.0
 wheel==0.34.2
