--- a/action.yml
+++ b/action.yml
@@ -1,34 +1,14 @@
-name: "MLSpec Sample Action - Process Data"
-description: "Sample Action Example: Processing Data"
+name: "MLSpec Action Samples - Process Data"
+description: "Connect to or create a Compute Target to your Azure Machine Learning Workspace with this GitHub Action"
 author: "aronchick"
 inputs:
-  METASTORE_CREDENTIALS:
-    description: "Some text"
+  azure_credentials:
+    description: "Paste output of `az ad sp create-for-rbac --name <your-sp-name> --role contributor --scopes /subscriptions/<your-subscriptionId>/resourceGroups/<your-rg> --sdk-auth` as value of secret variable: AZURE_CREDENTIALS"
     required: true
-  parameters_directory:
-    description: "Location of the parameters directory. Defaults to '.parameters'"
-    required: True
-    default: '.parameters'
-  execution_parameters_file:
-    description: "YAML file detailing the parameters for the process execution."
+  parameters_file:
+    description: "JSON file including the parameters of the compute."
     required: true
-    default: ".parameters/execution/execution.yaml"
-  schemas_directory: '/src/parameters/test_schemas'
-    description: "Directory for all schemas to validate. Must include base schema (if used)."
-    required: true
-    default: ".parameters/schemas"
-  step_name:
-    description: "Name for this step referenced in the workflow."
-    required: true
-    default: "process_data"
-  workflow_node_id:
-    description: "Workflow to load from the database."
-    required: true
-    default: "workflow|999999999999.9.9447|418e92ae-6793-4867-a82d-13e32cf570d2"
-  input_parameters:
-    description: "Input parameters (need to get from previous step, file or DB)"
-    required: true
-    default: "foo"
+    default: "compute.json"
 branding:
   icon: "chevron-up"
   color: "blue"
