--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -50,7 +50,7 @@ jobs:
           python3 -m pipenv install -r requirements.txt
           python3 -m pipenv run python3 -m unittest integration/test_e2e_integration.py
 
-      - name: Build Docker images
+      - name: Push Docker images
         id: push_docker_images
         uses: docker/build-push-action@v1.1.0
         with:
@@ -58,4 +58,4 @@ jobs:
           repository: mlspeclib/mlspeclib-action-sample-process-data
           tag_with_ref: True
           tag_with_sha: True
-          push: False
+          push: True
