--- a/integration/.parameters/schemas/training_result.yaml
+++ b/integration/.parameters/schemas/training_result.yaml
@@ -8,7 +8,7 @@ mlspec_schema_version:
 
 mlspec_schema_type:
   # Identifies the type of this schema
-  meta: training_results
+  meta: training_result
 
 schema_version:
   # Identifies version of MLSpec to use to instantiate
