--- a/action.yml
+++ b/action.yml
@@ -5,47 +5,47 @@ inputs:
   METASTORE_CREDENTIALS:
     description: "Some text"
     required: true
-  workflow_node_id:
+  WORKFLOW_NODE_ID:
     description: "Some text"
     required: true
-  step_name:
+  STEP_NAME:
     description: "Some text"
     required: true
-  schemas_directory:
+  SCHEMA_DIRECTORY:
     description: "Some text"
     required: true
     default: ".parameters/schemas"
-  schemas_git_url:
+  SCHEMAS_GIT_URL:
     description: "Some text"
     required: false
-  previous_step_name:
+  PREVIOUS_STEP_NAME:
     description: "Some text"
     required: false
-  next_step_name:
+  NEXT_STEP_NAME:
     description: "Some text"
     required: false
-  input_parameters_raw:
+  INPUT_PARAMETERS_RAW:
     description: "Some text"
     required: false
-  input_parameters_base64:
+  INPUT_PARAMETERS_BASE64:
     description: "Some text"
     required: false
-  input_parameters_node_id:
+  INPUT_PARAMETERS_NODE_ID:
     description: "Some text"
     required: false
-  input_parameters_file_path:
+  INPUT_PARAMETERS_FILE_PATH:
     description: "Some text"
     required: false
-  execution_parameters_raw:
+  EXECUTION_PARAMETERS_RAW:
     description: "Some text"
     required: false
-  execution_parameters_base64:
+  EXECUTION_PARAMETERS_BASE64:
     description: "Some text"
     required: false
-  execution_parameters_node_id:
+  EXECUTION_PARAMETERS_NODE_ID:
     description: "Some text"
     required: false
-  execution_parameters_file_path:
+  EXECUTION_PARAMETERS_FILE_PATH:
     description: "Some text"
     required: false
 branding:
