--- a/action.yml
+++ b/action.yml
@@ -65,4 +65,4 @@ branding:
   color: "blue"
 runs: 
   using: 'docker'
-  image: 'docker://mlspec/mlspeclib-action-samples-process-data@sha256:baf8c41403ec9252dd09d245492f0de18e5c60773235c919c61ee4533b443560'
+  image: 'registry.hub.docker.com/mlspec/mlspeclib-action-samples-process-data@sha256:baf8c41403ec9252dd09d245492f0de18e5c60773235c919c61ee4533b443560'
