--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -30,4 +30,5 @@ jobs:
       - name: Test
         id: python_test
         run: |
-          python3 -m unittest tests/*
+          python3 -m unittest tests/test*
+          python3 -m unittest integration/test*
