--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,8 +14,7 @@ jobs:
         id: checkout_repository
         uses: actions/checkout@master
         with:
-          ref: ${{github.ref}}
-          submodules: 'true'
+          submodules: 'recursive'
   
       - name: Docker Login
         id: docker_login
