--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 -i https://pypi.org/simple
 aenum==2.2.3
-gitdb==4.0.5
+gitdb==4.0.5; python_version >= '3.4'
 gitpython==3.1.3
 gremlinpython==3.4.6
 isodate==0.6.0
@@ -8,12 +8,14 @@ marshmallow==3.6.0
 mlspeclib==0.0.24
 msgpack==1.0.0
 pymysql==0.9.3
-python-box==5.0.0a0
+python-box==4.2.3
 pyyaml==5.3.1
+ruamel.yaml.clib==0.2.0; python_version < '3.9' and platform_python_implementation == 'CPython'
+ruamel.yaml==0.16.10
 semver==2.10.1
-six==1.15.0
-smmap==3.0.4
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+smmap==3.0.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 toml==0.10.1
-tornado==5.1.1
-uritools==3.0.0
-wheel==0.34.2
+tornado==5.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+uritools==3.0.0; python_version ~= '3.5'
+wheel==0.34.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
