--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "utils"]
 	path = utils
 	url = https://github.com/mlspec/mlspeclib-action-utils.git
+[submodule ".parameters/.parameters/schemas"]
+	path = .parameters/.parameters/schemas
+	url = git@github.com:mlspec/mlspeclib-action-samples-schemas.git
+[submodule ".parameters/schemas"]
+	path = .parameters/schemas
+	url = git@github.com:mlspec/mlspeclib-action-samples-schemas.git
