--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "utils"]
 	path = utils
 	url = https://github.com/mlspec/mlspeclib-action-utils.git
+[submodule ".parameters/schemas"]
+	path = .parameters/schemas
+	url = git@github.com:mlspec/mlspeclib-action-samples-schemas.git
